Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "bytelist-svn6558.tar.bz2": 842f9fc34f1c1c41b2c82e2c0a2c73341d8ad33b
+  jruby-bytelist-1.0.8-0-gd0ec879.tar.gz: 8362d8e1db0b11261b0c400bf352d102e40aaf31
